# EEE4165

./: .gitignore
hw1/: CMakeLists.txt  affine_transform.hpp  hw1  interpolation.hpp  main.cpp
hw1/data/: plots.vsz  psnr.csv  throughput.csv
hw1/report/: master.tex
hw1/specification/: Chronometer.tif  Right_arrow.tif  affine.m
hw2/: CMakeLists.txt  main.cpp
hw2/report/: master.tex
hw2/specification/: Boy.tif
hw3/: Astronaut.tif  Rectangle.tif  center_freq.m  complex_image.m  fourier_filter.m  fssort.ini  gaussian_kernel.m  impl1.m  impl2.m  impl3.m  load_image.m  main.m  quantize_image.m
hw3/report/: master.tex
hw3/report/figs/: Linear_chirp.tif
hw4/: CMakeLists.txt  main.cpp
hw4/data/: adapt_perf.vsz  adaptive_perf.csv  size.csv
hw4/report/: master.tex
hw4/specification/: Sogang.tif
hw4/specification/Ckt_board/: Ckt_board_pepp_0.05.tif  Ckt_board_pepp_0.1.tif  Ckt_board_pepp_0.3.tif  Ckt_board_pepp_0.5.tif  Ckt_board_salt&pepper_0.05.tif  Ckt_board_salt&pepper_0.1.tif  Ckt_board_salt&pepper_0.3.tif  Ckt_board_salt&pepper_0.5.tif  Ckt_board_salt_0.05.tif  Ckt_board_salt_0.1.tif  Ckt_board_salt_0.3.tif  Ckt_board_salt_0.5.tif
